--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,3 +1,3 @@
-echo "export SENDGRID_API_KEY='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'" > sendgrid.env
+echo "export SENDGRID_API_KEY='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'" > sendgrid.env
 echo "sendgrid.env" >> .gitignore
 source ./sendgrid.env
